name:                fishmax
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/avinashbot/fishmax#readme
license:             GPL
license-file:        LICENSE
author:              Avinash Dwarapu
maintainer:          avinash@dwarapu.me
copyright:           2017 Avinash Dwarapu
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fishmax
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , random == 1.1.*
    , containers == 0.5.10.*

test-suite spec
  hs-source-dirs: src test
  main-is: Spec.hs
  Type: exitcode-stdio-1.0
  build-depends:
      base >= 4.7 && < 5
    , hspec == 2.4.*
    , containers == 0.5.10.*
  other-modules:
      Game.FishmaxSpec
      Game.Fishmax.ModelSpec
